# Towa

./: .gitignore  GETTING_STARTED.md  LICENSE  PROJECT_OVERVIEW.md  README.en.md  README.ja.md  README.md
.claude/: settings.local.json
docs/: BUILDING.md  CEPTON_SETUP.md  CEPTON_UFB_SETUP.md  QUICKSTART.md  README.en.md  UFB_QUICKSTART.md
scripts/: setup.bat  setup.sh
src/c/: CMakeLists.txt  env_checker.c
src/rust/: Cargo.toml
src/rust/src/: config.rs  installer.rs  main.rs
