[package]
name = "towa-cli"
version = "0.1.0"
edition = "2021"
authors = ["Towa Contributors"]
description = "Environment setup and configuration tool"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.1"
reqwest = { version = "0.11", features = ["blocking"] }
dirs = "5.0"
